# genhealth-assessment

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PLAN.md  docker-compose.yml  lefthook.yml  railway.toml  start.sh
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_01_cf246483d0af_create_orders_and_activity_logs.py
backend/src/genhealth/: main.py
backend/src/genhealth/api/v1/routes/: activity.py  documents.py  health.py  orders.py
backend/src/genhealth/core/: config.py  database.py  logging.py
backend/src/genhealth/middleware/: activity_log.py  basic_auth.py
backend/src/genhealth/models/: __init__.py  activity_log.py  base.py  order.py
backend/src/genhealth/repositories/: activity_repository.py  order_repository.py
backend/src/genhealth/schemas/: activity_log.py  common.py  document.py  order.py
backend/src/genhealth/services/: activity_service.py  document_service.py  order_service.py
backend/src/genhealth/services/llm_providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py
backend/tests/: conftest.py  test_activity.py  test_anthropic_provider.py  test_document_service.py  test_documents.py  test_gemini_provider.py  test_health.py  test_llm_provider_factory.py  test_orders.py
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  vite-env.d.ts
frontend/src/api/: activity.ts  api.test.ts  client.ts  documents.ts  orders.ts  types.ts
frontend/src/components/ActivityFeed/: ActivityFeed.module.css  ActivityFeed.test.tsx  ActivityFeed.tsx
frontend/src/components/Layout/: Layout.module.css  Layout.test.tsx  Layout.tsx
frontend/src/components/OrderForm/: OrderForm.module.css  OrderForm.test.tsx  OrderForm.tsx
frontend/src/components/OrderTable/: OrderTable.module.css  OrderTable.test.tsx  OrderTable.tsx
frontend/src/components/Pagination/: Pagination.module.css  Pagination.test.tsx  Pagination.tsx
frontend/src/components/UploadCard/: UploadCard.module.css  UploadCard.test.tsx  UploadCard.tsx
frontend/src/pages/ActivityPage/: ActivityPage.module.css  ActivityPage.test.tsx  ActivityPage.tsx
frontend/src/pages/OrderDetailPage/: OrderDetailPage.module.css  OrderDetailPage.test.tsx  OrderDetailPage.tsx
frontend/src/pages/OrdersPage/: OrdersPage.module.css  OrdersPage.test.tsx  OrdersPage.tsx
frontend/src/providers/: QueryProvider.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx
frontend/src/styles/: globals.css
frontend/src/tests/: setup.ts
